--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@next/font": "^14.2.6",
     "contentful": "^10.15.0",
     "next": "^14.2.6",
     "react": "18.2.0",
