--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
     "plugin:react/recommended",
     "prettier"
   ],
-  "plugins": ["react"],
+  "plugins": ["react", "prettier"],
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module"
